--- a/aboutme.html
+++ b/aboutme.html
@@ -74,7 +74,7 @@
           <section id="main-content">
             <h2>My Background</h2>
             <p>
-              Growing up, I had the opportunity to be homeschooled in both the United States and Hong Kong before returning to the US for high school. My unconventional educational experiences have really given me a unique perspective that influences how I approach both academic work and creative projects to this day. I learned how to adapt to change and embrace new experiences, and I thrive in fast-paced, dynamic environments. It is my goal to bring together my creativity and interest in STEM, and my projects are a reflection of that.
+              Growing up, I had the opportunity to be homeschooled in both the United States and Hong Kong before returning to the US for high school. My unconventional educational experiences have really given me a unique perspective that influences how I approach both academic work and creative projects to this day. I learned to adapt to change and embrace new experiences, and I thrive in fast-paced, dynamic environments. It is my goal to bring together my creativity and interest in STEM, and my projects are a reflection of that.
             </p>
             <h2>Looking Forward</h2>
             <p>
