change font size on home page

--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
 							<header>
 								<h1>Hi, I'm Faith! 
 								</a></h1>
-								<h1>
+								<h2 class="intro-text">
 									This is where I share the projects I've created and the things I care about.
 									Feel free to explore and see what I've been working on :) 
-								</h1>
+								</h2>
 							</header>
 							<hr class="section-divider" />
 							<h2 style="text-align: center;">Data & Analytics Projects</h2>
