aboutme experience section added

--- a/aboutme.html
+++ b/aboutme.html
@@ -76,9 +76,16 @@
             <p>
               Growing up, I had the opportunity to be homeschooled in both the United States and Hong Kong before returning to the US for high school. My unconventional educational experiences have really given me a unique perspective that influences how I approach both academic work and creative projects to this day. I learned to adapt to change and embrace new experiences, and I thrive in fast-paced, dynamic environments. It is my goal to bring together my creativity and interest in STEM, and my projects are a reflection of that.
             </p>
+            <h2> 
+              Experience
+            </h2>
+            <p>
+              Both in and out of school, I enjoy finding new opportunities to learn skills and stay busy. At Cornell, I have had the chance to develop skills in project management and consulting through my work as a senior consultant for Cornell Global Research & Consulting, an organization dedicated to working with social impact startups and non-profits. Recently, I co-led a project with a MedTech startup to develop a customized dashboard for U.S. market entry and partnered with Scouting America to analyze membership data and design long-term retention strategies. I look forward to my upcoming work as a New Member Educator, and am excited to take what I have learned so far and share it with others. Beyond that, I engage with classes spanning subjects like economics, data science, mathematics, and more. My favorite classes I’ve taken at Cornell as far have been INFO2950 (Introduction to Data Science) and ECON3120 (Applied Econometrics). This summer, I applied consulting and analytical skills in my role as a Process Design Consultant intern in State Farm’s Investment Planning Services department. I used Excel and Qlik Sense to analyze data for stakeholders, identify opportunities for process optimization, and support cost reduction efforts. 
+In addition, I have developed my teaching and mentoring abilities through several years of private tutoring, volunteer work with Khan Academy, and serving as a teaching assistant at Cornell. These experiences have strengthened my analytical thinking and communication skills, and I continue looking for new ways to use data to drive meaningful impact.
+            </p>
             <h2>Looking Forward</h2>
             <p>
-              As someone who enjoys diving deep into projects and working on teams, I am excited to pursue opportunities in consulting, technology, and data analytics. I look forward to using my skills and creativity to drive positive change in future roles.
+              As someone who enjoys diving deep into projects and working on teams, I am excited to pursue opportunities in data analytics, technology, and consulting. I look forward to using my skills and creativity to create positive change in future roles.
             </p>
             <p>
               Thanks for stopping by!
