--- a/crimeinChicago.html
+++ b/crimeinChicago.html
@@ -116,7 +116,7 @@
                       <li>Emily Fu</li>
                     </ul>
 					<p>
-						Additional notes: It was a pleasure to work with both of my teammates on this project. Their expertise and contributions were invaluable, and I learned so much from both of them.
+						Additional notes: It was a pleasure to work with both of my teammates on this project. Their expertise and contributions were invaluable.
 					</p>
 					<a href="index.html" class="button">← Home</a>
                 
