--- a/educationandfutureearnings.html
+++ b/educationandfutureearnings.html
@@ -57,7 +57,7 @@
 						Analysis
 					</h2>
                     <p>
-						A linear regression model was chosen due to its sipmlicity and interpretability. Before creaeting the linear regression model, we verified that the four key assumptions of ordinary least squares (OLS) regression were met: linearity between predictors and the response variable, normally distributed residuals, constant variance of residuals (homoscedasticity), and absence of multicollinearity among predictors. This was supported through data transformations, visual diagnostics, and structural checks to ensure the model’s validity.
+						A linear regression model was chosen due to its simplicity and interpretability. Before creating the linear regression model, the four key assumptions of ordinary least squares (OLS) regression were verified: linearity between predictors and the response variable, normally distributed residuals, constant variance of residuals (homoscedasticity), and absence of multicollinearity among predictors. This was supported through data transformations, visual diagnostics, and structural checks to ensure the model’s validity.
 					</p>
 					<p>
 						The below visualizations illustrate how the 4 key assumptions of linear regression were satisfied:
@@ -92,7 +92,7 @@
 					</ul>
                     <h2>Additional Contributors</h2>
                     <ul>
-                      <li>Anushna Bardhan</li>
+                      <li>Anoushna Bardhan</li>
                     </ul>
 					<a href="index.html" class="button">← Home</a>
                 
